--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,20 +8,23 @@ main h1 {
 
 nav {
     background-color: beige;
-    text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
+    padding: 10px;
 }
 
 nav a {
     margin: 20px;
     text-decoration: underline;
+    display: block;
+    color: brown;
+    padding: 10px;
 }
 
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(red, green, blue / 0.2);
+    border: 1px solid rgb(0,0,0 / 0.2);
     padding: 1rem;
     background-color: #eee;
     color: #333;
@@ -36,6 +39,9 @@ aside img {
 main img {
     width: 150px;
     height: auto;
+    border: #000;
+    padding: 10px;
+    box-shadow: #333;
 }
 
 p {
