--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ main img {
     height: auto;
     border: #000;
     padding: 10px;
-    box-shadow: #333;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 p {
